--- a/idea-to-grant/package.json
+++ b/idea-to-grant/package.json
@@ -4,12 +4,22 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/material-top-tabs": "^5.3.11",
+    "@react-navigation/native": "^5.9.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
+    "react": "^16.13.1",
     "react-dom": "^17.0.1",
+    "react-native": "^0.63.4",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.16.1",
+    "react-native-tab-view": "^2.15.2",
     "react-scripts": "4.0.0",
+    "react-tabs": "^3.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
