--- a/idea-to-grant/package.json
+++ b/idea-to-grant/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "normalize-date": "0.0.4",
     "react": "^16.13.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.63.4",
@@ -32,7 +33,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "env": {
+      "webextensions": true
+    }
   },
   "browserslist": {
     "production": [
