--- a/idea-to-grant/package.json
+++ b/idea-to-grant/package.json
@@ -14,6 +14,7 @@
     "normalize-date": "0.0.4",
     "react": "^16.13.1",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.2",
     "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
