--- a/idea-to-grant/package.json
+++ b/idea-to-grant/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-tab-view": "^2.15.2",
+    "react-paginate": "^7.1.2",
     "react-scripts": "4.0.0",
     "react-tabs": "^3.1.2",
     "web-vitals": "^0.2.4"
