--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,5 +13,6 @@ spring.datasource.url=jdbc:h2:./data/database
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 # running
-# comment out this line to test on localhost:8080
+# comment out these lines to test on localhost:8080
 server.port=50998
+server.forward-headers-strategy=NATIVE
