--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # path
 spring.data.rest.basePath=/api
 # logging
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=INFO
-logging.file.name=./LOG.log
-spring.mvc.log-request-details=true
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate.SQL=INFO
+#logging.file.name=./LOG.log
+#spring.mvc.log-request-details=true
 # console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -14,5 +14,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 # running
 # comment out these lines to test on localhost:8080
-server.port=50998
+server.port=8080
 server.forward-headers-strategy=NATIVE
