--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.jpa.hibernate.ddl-auto=update
 # comment out these lines to test on localhost:8080
 server.port=50998
 server.forward-headers-strategy=NATIVE
+server.tomcat.threads.max=4
