--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # path
-spring.data.rest.basePath=/api
+spring.data.rest.basePath=/ideatogrant/api
 # logging
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate.SQL=INFO
