--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,8 +4,8 @@ plugins {
 	id 'java'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+group = 'com.ideatogrant'
+version = ''
 sourceCompatibility = '11'
 
 repositories {
