cleaned up code

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # path
 spring.data.rest.basePath=/ideatogrant/api
 # logging
-#logging.level.org.springframework.web=DEBUG
-#logging.level.org.hibernate.SQL=INFO
-#logging.file.name=./LOG.log
-#spring.mvc.log-request-details=true
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=INFO
+logging.file.name=./LOG.log
+spring.mvc.log-request-details=true
 # console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
